--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,12 +28,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^6.0.0",
-    "framer-motion": "^12.19.1",
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-lottie-player": "^2.1.0",
     "recharts": "^3.0.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
@@ -45,8 +46,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-scroll": "^1.8.10",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.3",
     "typescript": "^5"
