--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.15.1",
     "nodemailer": "^7.0.3",
     "resend": "^4.6.0",
+    "socket.io": "^4.8.1",
     "stripe": "^18.1.1"
   }
 }
